--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "mongodb":"cd mongodb-docker && docker-compose up" ,
         "build":"tsc",
         "start": "node dist/server.js"
     },
